# omniclon2

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  OmniClon2-Launcher.bat  README.md
backend/: main.py  pyproject.toml  test_model_endpoints.py  test_polish_detection.py
backend/models/: catalog.json
backend/services/: model_manager.py  voice_cloning.py
data/: sample_texts.csv  sample_texts.xlsx
docs/: ARCHITECTURE.md  GUIA_USUARIO.md  IMPROVEMENTS_BACKLOG.md  MODELOS_Y_DISTRIBUCION.md  MODEL_MANAGEMENT.md  REWRITE_PROGRESS.md  errores.md
docs/ADR/: 0001-hybrid-architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: backend.rs  diagnostics.rs  lib.rs  main.rs
frontend/src-tauri/src/commands/: media.rs  mod.rs  models.rs
frontend/src/components/: BootstrapSplash.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/panels/: LogsPanel.tsx  MediaPanel.tsx  ScriptsPanel.tsx  VoicePanel.tsx
frontend/src/components/preview/: VideoPreview.tsx  (+1 more)
frontend/src/hooks/: useBackendStatus.ts  useKeyboardShortcuts.ts
frontend/src/lib/: applyScriptSnapshot.ts  frameCapture.ts  log.ts  version.ts  voiceOptions.ts
frontend/src/stores/: editorStore.ts  modelStore.ts  voiceStore.ts
frontend/src/types/: index.ts
scripts/: cdp_e2e.py  cdp_probe.py  cdp_screenshot.py  e2e_video_clone_test.py  kill_omniclon.ps1  package-release.ps1
(+7 files in other folders)
