[project]
name = "backend"
version = "1.0.1"
description = "OmniClon 2 Python backend — autonomous voice cloning with k2-fsa/OmniVoice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "onnxruntime>=1.15.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "safetensors>=0.4.3",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.48.0",
    # k2-fsa/OmniVoice real inference stack
    "torch>=2.4",
    "torchaudio>=2.4",
    "transformers>=5.3.0",
    "accelerate",
    "pydub",
    "psutil>=7.2.2",
    "setuptools>=75.0,<82",
    "openai-whisper>=20250625",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
